test/pure/negative/impure2.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : int -> int[@@gospel {| y = f x
    pure
    diverges |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

val f : int -> int
(*@ y = f x
    diverges
     *)
File "impure2.mli", line 2, characters 5-6:
Error: Type checking error: a pure function cannot diverge.
